--- a/web_css-2.css
+++ b/web_css-2.css
@@ -23,7 +23,7 @@ nav ul li a {
     font-size: 1.32rem;
     color: #e0d8d8;
     font-weight: bold;
-    padding: 10px 16px ;
+    padding: 12px 16px ;
     transition: .5s;
 }
 nav ul li a:hover {
@@ -35,3 +35,16 @@ nav ul li a:hover {
 nav div{
     color: #fff;
 }
+
+/* hero area code start  */
+
+.header{
+    width: 1000px;
+    background-image: url(../web_create/image/image-3.jfif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+/* .search_box_icon_parent{
+    display: flex;
+} */
