--- a/web_css-2.css
+++ b/web_css-2.css
@@ -1,104 +1,186 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-nav{
-    background: #101631e8;
+nav h2 {
+    width: 200px;
+    font-size: 30px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #fff;
+}
+nav h2 span {
+    color: #adff;
+}
+
+/* nav-animation code start */
+nav {
+    background: #151515;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 150px ;
+    padding: 0px 150px ;
+    overflow: hidden;
     border-bottom: 4px solid #04191C;
 }
-
 nav ul {
     display: flex;
+    list-style: none;
 }
 nav ul li {
-    list-style: none;
-    margin: 5px 10px ;
+    margin: 5px 12px;
 }
-nav ul li a { 
+nav ul li a {
     text-decoration: none;
-    font-size: 1.32rem;
-    color: #e0d8d8;
+    font-size: 1.1em;
     font-weight: bold;
-    padding: 12px 16px ;
-    transition: .5s;
+    padding: 12px 15px;
+    color: #37cae4;
+    
+    transition: .5s ;
+
+    position: relative;
+    display: inline-block;
+    text-transform: uppercase;
+    overflow: hidden;
+
 }
 nav ul li a:hover {
-    background: #000;
-    color: #f00;
-    border-radius: 8px;
+    color: #000000e7;
+    background-color: #07ffe6;
+    border-radius: 5px;
+    text-shadow: 0 0 5px #0effefe1,
+                 0 0 25px #0effefe1,
+                 0 0 50px #0effefe1,
+                 0 0 200px #0effefe1;
+    -webkit-box-reflect: below 1px linear-gradient(transparent , #0005);
 }
 
-nav div{
-    color: #fff;
+nav ul li:first-child a {
+    filter: hue-rotate(0deg);
+}
+nav ul li:nth-child(2) a {
+    filter: hue-rotate(55deg);
+}
+nav ul li:nth-child(3) a {
+    filter: hue-rotate(110deg);
+} 
+nav ul li:nth-child(4) a {
+    filter: hue-rotate(225deg);
+}
+nav ul li:last-child a {
+    filter: hue-rotate(320deg);
 }
 
-/* hero area code start  */
+nav ul li a span {
+    position: absolute;
+    display: block;
+}
+nav ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient( transparent , #00ffe5);
+    animation: animate1 1s infinite;
+}
+@keyframes animate1 {
+    0% {
+        left: -100%;
+    }
+    100% {
+        left: 100%;
+    }
+}
+nav ul li a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient( transparent , #00ffe5);
+    animation: animate2 1s infinite;
+    animation-delay: .25s;
+}
+@keyframes animate2 {
+    0% {
+        top: -100%;
+    }
+    100% {
+        top: 100%;
+    }
+} 
+ 
+nav ul li a span:nth-child(3) {
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient( transparent , #00ffe5);
+    animation: animate3 1s infinite;
+    animation-delay: .5s;
+}
+@keyframes animate3 {
+    0% {
+        right: -100%;
+    }
+    100% {
+        right: 100%;
+    }
+}
 
-.header{
-    padding: 200px 0;
+nav ul li a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient( transparent , #00ffe5);
+    animation: animate4 1s infinite;
+    animation-delay: .75s;
+}
+@keyframes animate4 {
+    0% {
+        bottom: -100%;
+    }
+    100% {
+        bottom: 100%;
+    }
+}
+/* nav-animation code end  */
+
+/* hero area code start here */
+
+header {
     background-image: url(../web_create/image/image-1.jfif);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover ;
     background-position: center;
+    padding: 200px 0;
 }
-.search_box_icon_parent{
-    display: flex;
-    justify-content: center;
-}
-.search_box_icon_parent i {
-    width: 50px;
-    height: 40px;
-    color: #fff;
-    font-size: 30px ;
-    background-color: #09070d;
+header div {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
-    margin-left: -5px;
-    cursor: pointer;
 }
-.search_box_icon_parent input{
+header div input {
     width: 400px;
     height: 40px;
-     border-radius: 5px ;
-     font-size: 20px;
-     border: none;
-     padding-left: 20px;
+    padding: 5px 20px;
+    font-size: 20px;
+    border: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
-
-/* main section code start  */
-
-main {
-    background-color: #04191C;
-}
-
-.main_section{
-    width: 1000px;
-    margin: 0 auto;
-    padding: 50px;
-
-    border: red solid 5px;
-}
-.section_video_item{
+header div .header_icon {
+    width: 50px;
+    height: 40px;
+    color: #000000;
+    background-color: #00bffffa;
+    font-size: 25px;
     display: flex;
-    justify-content: space-between;
-}
-.section_video_item h3,h4{
-    color: #daecf4ee;
-    font-size: 23px;
-    font-weight: bold;
-}
-.section_video_item span{
-    margin: 0 10px;
-    padding: 5px;
-    border-radius: 4px;
-    background-color: #757878;
-    border: 1px solid #80805b;
+    justify-self: center;
+    align-items: center;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     cursor: pointer;
 }
