--- a/web_css-2.css
+++ b/web_css-2.css
@@ -151,7 +151,7 @@ nav ul li a span:nth-child(4) {
 /* hero area code start here */
 
 header {
-    background-image: url(../web_create/image/image-1.jfif);
+    background-image: url(image/dall-e.webp);
     background-repeat: no-repeat;
     background-size: cover ;
     background-position: center;
@@ -183,4 +183,101 @@ header div .header_icon {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     cursor: pointer;
+}
+
+/* main area code :start here  */
+
+
+main {
+    background-color: #151515;
+    padding: 20px;
+}
+.s1__container {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+.s1__text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    color: #7d7d7dea;
+
+}
+.s1__text h4 span {
+    width: 20px;
+    color: #000;
+    background-color: #fff;
+    padding: 5px;
+    margin: 0 5px;
+    text-align: center;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* image code :start here  */
+
+.single_image_parent {
+    padding-top: 20px;
+
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+    grid-row-gap: 50px;
+    grid-column-gap: 20px;
+}
+.single_image{
+    height: 250px;
+    border: 1px solid #808080;
+}
+.single_image img{
+    width: 100%;
+    height: 100%;
+    
+    cursor: pointer;
+    transition: .4s;
+}
+.single_image:hover img {
+    transform: scale(1.1);
+    border: none;
+    border-radius: 5px;
+}
+.single_image div{
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    margin-top: 10px;
+}
+
+/* multiple page button code start here  */
+
+.s1_multiple_page{
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+.s1_multiple_page h3 a{
+    background-color: #13bc45;
+    padding: 10px 25px;
+    border-radius: 5px;
+    transition: .3s;
+}
+.s1_multiple_page h3 a:hover{
+    background-color: #14ed55;
+
+}
+.s1_multiple_page a{
+    text-decoration: none;
+    color: #fff;
+}
+.s1_multiple_page div a{
+    background-color: #faebd7;
+    color: #000;
+    padding: 8px;
+    margin: 0 10px;
+    border: 1px solid #808080f3;
+    border-radius: 5px;
+}
+.s1_multiple_page div a:first-child{
+    background-color: #14e051;
 }
