--- a/web_css-2.css
+++ b/web_css-2.css
@@ -281,3 +281,48 @@ main {
 .s1_multiple_page div a:first-child{
     background-color: #14e051;
 }
+
+
+/* footer code start here  */
+
+footer {
+    background-color: #2a0326;
+    color: #fff;
+}
+.f1__container {
+
+    width: 900px;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    justify-content: space-between;
+    grid-gap: 50px;
+
+    /* border: 5px red solid; */
+}
+
+.footer_item-1 h3 , .footer_item-2 h3 , .footer_item-3 div{
+    font-size: 25px;
+    padding: 30px 0;
+    margin-top: 20px;
+}
+.footer_item-1:first-child p{
+    margin-bottom: 50px;
+}
+
+.footer_item-2 a {
+    color: #fff;
+    text-decoration: none;
+}
+.footer_item-2 p , .footer_item-3 p {
+    margin-bottom: 10px;
+}
+    
+.footer_item-3 div a {
+    color: #fff;
+    margin: 0 5px;
+    background-color: #131918cb;
+    padding: 10px;
+    border-radius: 5px;
+}
