--- a/extra_pages/video.css
+++ b/extra_pages/video.css
@@ -152,56 +152,96 @@ nav ul li a span:nth-child(4) {
 }
 
 /* navbar code finised */
-
-#article_container{
-    width: 1300px;
+main {
+    background-color: #151515;
+    padding: 20px;
+}
+.s1__container {
+    width: 1100px;
     margin: 0 auto;
+    padding: 50px 0;
 }
+.s1__text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    color: #7d7d7dea;
 
-#article_container h2 {
-    color: green;
-    font-size: 30px;
+}
+.s1__text h4 span {
+    width: 20px;
+    color: #000;
+    background-color: #fff;
+    padding: 5px;
+    margin: 0 5px;
     text-align: center;
-    margin: 40px 0;
-    font-weight: bold;
-}
-#article_container h2 span {
-    color: red;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.single_blog_card_parent{
+/* image code :start here  */
+
+.single_image_parent {
+    padding-top: 20px;
+
     display: grid;
     grid-template-columns: repeat(4 , 1fr);
-    grid-gap: 25px;
-    margin-bottom: 100px;
+    grid-row-gap: 50px;
+    grid-column-gap: 20px;
 }
-
-.single_img_div{
-    height: 400px;
+.single_image{
+    height: 250px;
+    border: 1px solid #808080;
 }
-.single_img_div img{
+.single_image img{
     width: 100%;
     height: 100%;
+    
+    cursor: pointer;
+    transition: .2s;
+}
+.single_image:hover img {
+    transform: scale(1.1);
+    border: none;
+    border-radius: 5px;
+}
+.single_image div{
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    margin-top: 10px;
 }
 
-.single_blog_card_itme{
-    background-color: #4c97666f;
-    box-shadow: 3px 3px 10px gray;
-    transition: .5s;
-}
-.single_blog_card_itme:hover{
-    box-shadow: 5px 5px 10px gray;
-    transform: scale(1.05);
-}
+/* multiple page button code start here  */
 
-.single_card_text{
-    padding: 20px 30px;
+.s1_multiple_page{
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
 }
-.single_card_text span {
-    color: #ff8400eb;
+.s1_multiple_page h3 a{
+    background-color: #13bc45;
+    padding: 10px 25px;
+    border-radius: 5px;
+    transition: .3s;
 }
-.single_card_text h3 , .single_card_text p , .single_card_text a {
-    display:block;
-    font-size: 20px ;
-    margin-top: 16px ;
+.s1_multiple_page h3 a:hover{
+    background-color: #14ed55;
+
+}
+.s1_multiple_page a{
+    text-decoration: none;
+    color: #fff;
+}
+.s1_multiple_page div a{
+    background-color: #faebd7;
+    color: #000;
+    padding: 8px;
+    margin: 0 10px;
+    border: 1px solid #808080f3;
+    border-radius: 5px;
+}
+.s1_multiple_page div a:first-child{
+    background-color: #14e051;
 }
